tests/baselines/reference/functionCall8.errors.txt
functionCall8.ts(3,12): error TS2554: Expected 0-1 arguments, but got 2.
functionCall8.ts(4,5): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.


==== functionCall8.ts (2 errors) ====
    function foo(a?:string){}
    foo('foo'); 
    foo('foo', 'bar'); 
               ~~~~~
!!! error TS2554: Expected 0-1 arguments, but got 2.
    foo(4);
        ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    foo();
    